# physics

./: #$Q$E$Base.scala#  #test.scala#  $Dimensions.scala  $Q$E$Base.scala  $Units.scala  .cache-main  .classpath  .gitignore  .project  README.org  start.msl  test.scala  test.scala~
julia-sample/: nonlinear-poisson.jl
mathmodels/: .cache-main  .classpath  .project
mathmodels/src/uniformal/physics/: GeneralExporterStructures.scala  ImpreciseFloat.scala  MMTInterface.scala  MPDStatsExporter.scala  MPDStructures.scala  MPDTool.scala  PythonExporter.scala  mpd.scala  test.scala
source_export/: $Example.mpd-python  $Example.py  Declaration.hpp~  Example.py  GPATH  GRTAGS  GTAGS  MPDBase.cpp  MPDBase.hpp  MPDState.hpp  VanRoosbrockEg.mmt  VanRoosbrockEg.py  VanRoosbrockEgModel.py  example.mmt  example.py  example.py~  mpd_base.py  mpdbase.py
source_export/C++/array/: CMakeLists.txt  adjacency.cxx  adjacency.h  array.cxx  array.h  array_block.cxx  array_block.h  array_handler.h  array_omp.cxx  array_omp.h  array_stack.cxx  array_stack.h  arrayprint.cxx  arrayprint.h  arraytools.cxx  arraytools.h  arrayxx.cxx  block.cxx  block.h  linalgdens.cxx  linalgdens.h  operator.h  partitioning.cxx  partitioning.h  vector.cxx  vector.h
source_export/cpp/: Declaration.hpp  MPDBase.hpp
source_export/python/: .#example.py  VanRoosbrockEg.py  example.py  mpdbase.py  testnb.ipynb
source_export/python/.ipynb_checkpoints/: testnb-checkpoint.ipynb
